#3652 closed defect (fixed)
FFPlay cannot play H264 file
| Reported by: | Dmitry Koteroff | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | h264 regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Attachments (1)
Change History (5)
comment:2 by , 12 years ago
| Keywords: | h264 regression added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
For future tickets: Please always include a failing ffmpeg command line together with the complete, uncut console output. Only report ffplay issues if they are not reproducible with ffmpeg.
Regression since 65c2fe71 - related to ticket #2738.
$ ffmpeg -i no_recovery_ffmpeg_cut.h264 -qscale 2 out.avi
ffmpeg version N-63346-g2491579 Copyright (c) 2000-2014 the FFmpeg developers
built on May 20 2014 20:00:07 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 86.100 / 52. 86.100
libavcodec 55. 63.100 / 55. 63.100
libavformat 55. 39.100 / 55. 39.100
libavdevice 55. 13.101 / 55. 13.101
libavfilter 4. 5.100 / 4. 5.100
libswscale 2. 6.100 / 2. 6.100
libswresample 0. 19.100 / 0. 19.100
libpostproc 52. 3.100 / 52. 3.100
Input #0, h264, from 'no_recovery_ffmpeg_cut.h264':
Duration: N/A, bitrate: N/A
Stream #0:0: Video: h264 (High), yuv420p(tv, bt709), 1920x1080 [SAR 1:1 DAR 16:9], 23.98 fps, 23.98 tbr, 1200k tbn, 47.95 tbc
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
Metadata:
ISFT : Lavf55.39.100
Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 23.98 fps, 23.98 tbn, 23.98 tbc
Metadata:
encoder : Lavc55.63.100 mpeg4
Stream mapping:
Stream #0:0 -> #0:0 (h264 -> mpeg4)
Press [q] to stop, [?] for help
[h264 @ 0x42d4ac0] mmco: unref short failure
Last message repeated 1 times
[h264 @ 0x45b6a40] error while decoding MB 49 63, bytestream -6
[h264 @ 0x45b6a40] concealing 600 DC, 600 AC, 600 MV errors in P frame
frame= 2 fps=0.0 q=2.0 Lsize= 156kB time=00:00:02.16 bitrate= 590.2kbits/s
video:149kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 4.596356%
There should be at least 27 frames in the output file (older versions of FFmpeg encoded 53 frames).
by , 12 years ago
| Attachment: | no_recovery_ffmpeg_cut.h264 added |
|---|
comment:3 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



I can add some information - if in this check:
file - libavcodec\h264.c, line 1898-1899,
if (h->next_output_pic && ( h->next_output_pic->recovered)) {remove
then file playback good. But - it's not good solution